--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,267 @@
+:root {
+  --shark: #202529;
+  --shark-lighter: #282e33;
+  --bright-gray: #394148;
+  --regent-gray: #818f9b;
+  --alto: #d6d6d6;
+  --wild-sand: #f5f5f5;
+  --green: #7affa2;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+}
+
+.Nav {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  color: var(--alto);
+  background: var(--shark);
+}
+
+.Nav + * {
+  display: flex;
+  flex: 1;
+}
+
+.User {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.UserImageContainer {
+  position: relative;
+}
+
+.UserImageContainer::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  background: var(--green);
+  border-radius: 50%;
+  border: 2px solid var(--shark);
+}
+
+.UserImage {
+  border-radius: 50%;
+  height: 50px;
+}
+
+.text-button {
+  font: inherit;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  text-decoration: underline;
+  display: inline;
+  cursor: pointer;
+  font-size: 80%;
+  color: white;
+}
+
+.ChannelNav a {
+  font-size: 90%;
+  padding: 8px 20px;
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.ChannelNav a.active {
+  background: var(--bright-gray);
+}
+
+.Channel {
+  display: flex;
+  flex: 1;
+  color: var(--alto);
+  background: var(--shark-lighter);
+}
+
+.ChannelMain {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.ChannelInfo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  font-weight: bold;
+  border-bottom: solid 1px var(--shark);
+}
+
+.Topic {
+}
+
+.TopicInput {
+  font: inherit;
+  color: var(--alto);
+  border: 1px solid transparent;
+  background: transparent;
+}
+
+.TopicInput:hover {
+  border-color: var(--shark);
+}
+
+.Messages {
+  flex: 1;
+  padding: 10px 20px 10px 20px;
+  line-height: 1.3;
+  overflow: auto;
+}
+
+.Day {
+  display: flex;
+  align-items: center;
+}
+
+.DayLine {
+  flex: 1;
+  height: 1px;
+  background: var(--shark);
+}
+
+.DayText {
+  font-weight: bold;
+  padding: 10px;
+  font-size: 80%;
+}
+
+.Message {
+  margin: 5px 0;
+  display: flex;
+}
+
+.Message.with-avatar {
+  display: flex;
+  margin-top: 10px;
+}
+
+.Avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center center;
+  background-color: #fefefe;
+  background-image: url(https://placekitten.com/64/64);
+}
+
+.Author {
+  margin-left: 16px;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.AuthorName {
+  display: flex;
+  align-items: baseline;
+}
+
+.UserName {
+  font-weight: bold;
+  font-size: 90%;
+}
+
+.TimeStamp {
+  margin-left: 10px;
+  font-size: 70%;
+  font-weight: normal;
+  color: #999;
+}
+
+.MessageContent {
+  margin-top: 8px;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.Message.no-avatar {
+  margin-left: 68px;
+}
+
+.ChatInputBox {
+  padding: 0px 20px 20px 20px;
+}
+
+.ChatInput {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 18px 26px;
+  font: inherit;
+  color: inherit;
+  border: none;
+  border-radius: 30px;
+  outline: none;
+  background-color: var(--bright-gray);
+}
+
+.ChatInput:focus {
+  border-color: var(--shark);
+}
+
+.Members {
+  padding: 20px;
+  border-left: solid 1px var(--shark);
+  width: 150px;
+}
+
+.Member {
+  display: flex;
+  align-items: center;
+}
+
+.MemberStatus {
+  margin-right: 5px;
+  border-radius: 50%;
+  height: 0.66em;
+  width: 0.66em;
+}
+
+.MemberStatus.online {
+  background: hsl(110, 50%, 50%);
+}
+
+.MemberStatus.offline {
+  background: hsl(10, 0%, 70%);
+}
+
+.EndOfMessages {
+  text-align: center;
+  color: hsl(200, 50%, 50%);
+  padding: 5px;
+}
+
+.LoadMore {
+  text-align: center;
+}
+
+.Login {
+  text-align: center;
+  margin-top: 55px;
 }
